# ppaass-v2

./: Cargo.toml  README.md  config.toml  install-v2.sh  install.sh  ppaass-proxy-start.sh  ppaass-proxy-v2-start.sh  test.http
.cargo/: config.toml
agent/: Cargo.toml
agent/core/: Cargo.toml  start.bat
agent/core/src/: crypto.rs  pool.rs
agent/core/src/bo/: config.rs  event.rs
agent/core/src/handler/: http.rs  mod.rs  socks5.rs
agent/core/src/pool/: connection.rs  mod.rs  pooled.rs  unpooled.rs
agent/src/: codec.rs  crypto.rs  error.rs  lib.rs  pool.rs  server.rs  session.rs
agent/src/bo/: config.rs  mod.rs  state.rs
agent/src/handler/: http.rs  mod.rs  socks5.rs
agent/ui-windows/: package-lock.json  package.json
agent/ui-windows/src-tauri/: Cargo.toml  tauri.conf.json
agent/ui-windows/src-tauri/src/: lib.rs  main.rs
codec/: Cargo.toml
codec/src/: codec.rs  error.rs  lib.rs
codec/src/heartbeat/: ping.rs
codec/src/holder/: encryption.rs  mod.rs  rsa.rs
codec/src/relay/: request.rs  response.rs
codec/src/session/: request.rs  response.rs
codec/src/tunnel/: mod.rs  request.rs  response.rs
core/: Cargo.toml
core/agent/: Cargo.toml
core/agent/src/: config.rs  crypto.rs  error.rs  lib.rs  server.rs
core/agent/src/bo/: config.rs  mod.rs  state.rs
core/agent/src/handler/: http.rs  mod.rs  socks5.rs
core/agent/src/pool/: connection.rs  mod.rs  pooled.rs  unpooled.rs
core/codec/src/: error.rs
core/codec/src/heartbeat/: mod.rs  pong.rs
core/codec/src/holder/: encryption.rs  mod.rs  rsa.rs
core/common/: Cargo.toml
core/common/src/: error.rs  lib.rs
core/crypto/src/: error.rs  lib.rs
core/domain/src/: address.rs  tunnel.rs
core/proxy/: Cargo.toml
core/proxy/src/: codec.rs  config.rs  crypto.rs  error.rs  lib.rs  server.rs
core/proxy/src/bo/: config.rs  mod.rs  state.rs
core/proxy/src/destination/: mod.rs  read.rs  tcp.rs  udp.rs  write.rs
core/proxy/src/destination/codec/: forward.rs  mod.rs  raw.rs
core/proxy/src/handler/: mod.rs  relay.rs  tunnel.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  lib.rs  rsa.rs
domain/: Cargo.toml
domain/src/: address.rs  business.rs  error.rs  heartbeat.rs  lib.rs  message.rs  packet.rs  payload.rs  relay.rs  session.rs  tunnel.rs
domain/src/message/: mod.rs
proxy/: Cargo.toml  start.sh
proxy/src/: args.rs  buffer.rs  codec.rs  config.rs  crypto.rs  encryption.rs  error.rs  lib.rs  server.rs
proxy/src/bo/: command.rs  config.rs  event.rs  mod.rs  session.rs  state.rs
proxy/src/codec/: decoder.rs  encoder.rs  mod.rs  session.rs
proxy/src/destination/: codec.rs  mod.rs  pool.rs  read.rs  write.rs
proxy/src/handler/: mod.rs  relay.rs  session.rs  tunnel.rs
proxy/src/tunnel/: mod.rs  tcp.rs  udp.rs
resources/: README.md
resources/agent/: config.toml
resources/proxy/: config.toml  forward-config.toml
script/: README.md  install-v2.sh  start-proxy.sh
ui/agent-ui-windows/: package.json
ui/agent-ui-windows/src-tauri/: Cargo.toml  tauri.conf.json
ui/agent-ui-windows/src-tauri/src/: main.rs
ui/agent-windows/: package.json
ui/agent-windows/src-tauri/: Cargo.toml  tauri.conf.json
ui/agent-windows/src-tauri/src/: main.rs
