[workspace]
members = ["agent", "domain", "proxy"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
derive_more = "1.0.0"
thiserror = "1.0.63"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
serde = "1.0.210"
toml = "0.8.19"
clap = "4.5.17"
tokio-util = "0.7.12"
futures-util = "0.3.30"
bytes = "1.7.2"
bincode = "1.3.3"
