[workspace]
members = ["agent", "crypto", "domain", "proxy"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
derive_more = "1.0.0"
thiserror = "2.0.1"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
serde = "1.0.210"
toml = "0.8.19"
clap = "4.5.17"
tokio-util = "0.7.12"
futures-util = "0.3.31"
bincode = "1.3.3"
socks5-impl = "0.5.15"
derive_builder = "0.20.2"
accessory = "2.0.0"
aes = "0.8"
cipher = "0.4"
ecb = "0.1"
rsa = "0.9"
rand = "0.8"
flate2 = "1.0.34"
futures = "0.3.31"
uuid = "1.11.0"
axum = "0.7.7"
tokio-tungstenite = "0.24.0"
hex = "0.4.3"
base64 = "0.22.1"
reqwest = "0.12.9"
serde_json = "1.0.132"
reqwest-websocket = "0.4.3"
pretty-hex = "0.4.1"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
url = "2.5.3"
axum-macros = "0.4.2"
tokio-io-timeout = "1.2.0"
mimalloc = "0.1.43"
deadpool = "0.12.1"

