[package]
name = "codec"
version = "0.1.0"
edition = "2021"

[dependencies]
ppaass-domain = { package = "domain", path = "../domain" }
ppaass-crypto = { package = "crypto", path = "../crypto" }
thiserror = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
flate2 = { workspace = true }