[package]
name = "codec"
version = "0.1.0"
edition = "2021"

[dependencies]
ppaass-domain = { path = "../domain", package = "domain" }
ppaass-crypto = { path = "../crypto", package = "crypto" }
tokio-util = { workspace = true, features = ["codec"] }
thiserror = { workspace = true }
bincode = { workspace = true }