[workspace]
members = ["agent", "codec", "crypto", "domain", "proxy"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
derive_more = "1.0.0"
thiserror = "2.0.1"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
chrono = "0.4.38"
serde = "1.0.210"
toml = "0.8.19"
clap = "4.5.17"
tokio-util = "0.7.12"
tokio-stream = "0.1.16"
futures-util = "0.3.31"
bincode = "1.3.3"
socks5-impl = "0.5.15"
derive_builder = "0.20.2"
accessory = "2.0.0"
aes = "0.8"
cipher = "0.4"
rsa = "0.9"
rand = "0.8"
futures = "0.3.31"
uuid = "1.11.0"
httpcodec = "0.2.3"
bytecodec = "0.4.15"
tokio-io-timeout = "1.2.0"
mimalloc = "0.1.43"
url = "2.5.4"
socket2 = "0.5.8"
concurrent-queue = "2.5.0"
pretty-hex = "0.4.1"


