[workspace]
members = ["agent", "codec", "crypto", "domain", "proxy"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
derive_more = "1"
thiserror = "2"
tokio = "1"
tracing = "0"
tracing-appender = "0.2.3"
tracing-subscriber = "0"
chrono = "0"
serde = "1"
toml = "0"
clap = "4"
tokio-util = "0"
tokio-stream = "0"
futures-util = "0"
bincode = "1"
socks5-impl = "0"
derive_builder = "0"
accessory = "2"
aes = "0"
cipher = "0"
rsa = "0"
rand = "0"
futures = "0"
uuid = "1"
httpcodec = "0"
bytecodec = "0"
tokio-io-timeout = "1.2.0"
mimalloc = "0"
url = "2"
socket2 = "0"
concurrent-queue = "2"
pretty-hex = "0"


