[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
rand = { workspace = true }
aes = { workspace = true }
rsa = { workspace = true }
cipher = { workspace = true, features = ["block-padding", "alloc"] }
ecb = { workspace = true }
